Add media service with miniIO
